# rust-sqlx-example

./: .env  Cargo.toml  main.sql  readme.md  run.bat
src/: main.rs  manager.rs
