[package]
name = "journaling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes" ] }
chrono = "0.4.23"
dotenvy = "0.15.6"
sqlx = { version = "0.6.2", features = [  "runtime-async-std-native-tls", "mysql", "chrono" ] }
